--- a/src/app/post-list-component/post-list-component.component.html
+++ b/src/app/post-list-component/post-list-component.component.html
@@ -1,1 +1,10 @@
-<app-post-list-item-component *ngFor="let thePost of listPost" [post]="thePost"></app-post-list-item-component>
+<div class="row">
+  <div class="col-xs-12">
+    <h2>Posts</h2>
+    <ul class="list-group">
+      <app-post-list-item-component *ngFor="let thePost of posts" [post]="thePost">
+      </app-post-list-item-component>
+    </ul>
+    <button class="btn btn-primary" (click)="onNewPost()">Nouveau Post</button>
+  </div>
+</div>
