--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,4 @@
+<app-header></app-header>
 <div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <h2>Posts</h2>
-      <ul class="list-group">
-        <app-post-list-component [listPost]="posts"></app-post-list-component>
-      </ul>
-    </div>
-  </div>
+    <router-outlet></router-outlet>
 </div>
